salvando sem terminar de concluir

--- a/8_REACT_ROUTER/reactrouter/src/pages/Home.css
+++ b/8_REACT_ROUTER/reactrouter/src/pages/Home.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
 }
 
-.products li {
+.products div {
     border: 1px solid #f5f5f5;
     border-radius: 5px;
     padding: 10px;
